// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lesson Card Complete State Should render lessonCard with loading... 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 border-0"
  >
    <div
      class="d-flex p-2"
    >
      <img
        src="/curriculumAssets/lessonCoversSvg/undefined"
      />
      <div
        class="w-100 pl-4"
      >
        <span
          class="badge badge-pill badge-success float-right mt-2 mr-2 p-2 d-flex align-items-center"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            style="height: 15px;"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
            />
            <polyline
              points="22 4 12 14.01 9 11.01"
            />
          </svg>
          <span
            class="mx-1"
          >
            COMPLETED
          </span>
        </span>
        <div>
          <h4
            class="lesson-card__title font-weight-bold mt-3"
          >
            <a
              href="/curriculum/undefined"
            />
          </h4>
          <div>
            <div
              class="d-inline-block mr-4"
            >
              <img
                alt="icon-challenge"
                class="mr-2"
                src="/curriculumAssets/icons/icon-challenge.svg"
              />
              <span
                class="lesson-card__icon-text"
              >
                 CHALLENGES
              </span>
            </div>
          </div>
          <p
            class="lesson-card__description mt-2"
          />
        </div>
        <a
          class="btn btn-sm bg-primary text-white float-right mb-2 mr-2"
        >
<<<<<<< HEAD
          <a
            class="btn btn-sm bg-primary text-white"
          >
            Review
            <nav
              class="navbar navbar-expand-lg navbar-light justify-content-between bg-white"
            >
              <div
                class="container"
              >
                <a
                  class="navbar-brand text-primary font-weight-bold"
                  href="/"
                >
                  C0D3
                </a>
                <div
                  id="navbarNav"
                >
                  <div
                    class="navbar-nav collapse navbar-collapse"
                  >
                    <div
                      class="navbar-nav collapse navbar-collapse"
                    >
                      <a
                        class="nav-item nav-link active"
                        href="/"
                      >
                        Home 
                        <span
                          class="sr-only"
                        >
                          (current)
                        </span>
                      </a>
                      <a
                        class="nav-item nav-link"
                        href="/#learning"
                      >
                        Learning Process
                      </a>
                      <a
                        class="nav-item nav-link"
                        href="https://c0d3.com/book"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        Resources
                      </a>
                      <a
                        class="nav-item nav-link"
                        href="https://chat.c0d3.com"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        Help
                      </a>
                    </div>
                  </div>
                </div>
                <div>
                  <a
                    class="btn btn-secondary border mr-3"
                    href="/login"
                  >
                    Login
                  </a>
                  <a
                    class="btn btn-secondary border mr-3"
                    href="/signup"
                  >
                    Signup
                  </a>
                </div>
              </div>
            </nav>
            <div
              class="container"
            >
              <div
                class="mt-4 card border-0 shadow-sm"
              >
                <div
                  class="card-body d-flex flex-column align-items-center"
                >
                  <h1>
                    Loading
                  </h1>
                  <div
                    class="spinner-border text-primary"
                    role="status"
                  >
                    <span
                      class="sr-only"
                    >
                      Loading...
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <footer
              class="mt-5 font-weight-light text-center pb-5 text-muted"
            >
              © Copyright 2020 GarageScript
              <br />
              All Rights Reserved
            </footer>
            Submissions
          </a>
        </span>
=======
          Review
          <span>
             ... 
          </span>
          Submissions
        </a>
>>>>>>> 09710e2606e29a9c54ce070a18314631bdeddfa2
      </div>
    </div>
  </div>
</div>
`;

exports[`Lesson Card Complete State Should render lessonCard with null if no data 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 border-0"
  >
    <div
      class="d-flex p-2"
    >
      <img
        src="/curriculumAssets/lessonCoversSvg/undefined"
      />
      <div
        class="w-100 pl-4"
      >
        <span
          class="badge badge-pill badge-success float-right mt-2 mr-2 p-2 d-flex align-items-center"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            style="height: 15px;"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
            />
            <polyline
              points="22 4 12 14.01 9 11.01"
            />
          </svg>
          <span
            class="mx-1"
          >
            COMPLETED
          </span>
        </span>
        <div>
          <h4
            class="lesson-card__title font-weight-bold mt-3"
          >
            <a
              href="/curriculum/undefined"
            />
          </h4>
          <div>
            <div
              class="d-inline-block mr-4"
            >
              <img
                alt="icon-challenge"
                class="mr-2"
                src="/curriculumAssets/icons/icon-challenge.svg"
              />
              <span
                class="lesson-card__icon-text"
              >
                 CHALLENGES
              </span>
            </div>
          </div>
          <p
            class="lesson-card__description mt-2"
          />
        </div>
        <a
          class="btn btn-sm bg-primary text-white float-right mb-2 mr-2"
        >
          Review
          Submissions
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Lesson Card Complete State Should render lessonCard with submission count 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 border-0"
  >
    <div
      class="d-flex p-2"
    >
      <img
        src="/curriculumAssets/lessonCoversSvg/undefined"
      />
      <div
        class="w-100 pl-4"
      >
        <span
          class="badge badge-pill badge-success float-right mt-2 mr-2 p-2 d-flex align-items-center"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            style="height: 15px;"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
            />
            <polyline
              points="22 4 12 14.01 9 11.01"
            />
          </svg>
          <span
            class="mx-1"
          >
            COMPLETED
          </span>
        </span>
        <div>
          <h4
            class="lesson-card__title font-weight-bold mt-3"
          >
            <a
              href="/curriculum/undefined"
            />
          </h4>
          <div>
            <div
              class="d-inline-block mr-4"
            >
              <img
                alt="icon-challenge"
                class="mr-2"
                src="/curriculumAssets/icons/icon-challenge.svg"
              />
              <span
                class="lesson-card__icon-text"
              >
                 CHALLENGES
              </span>
            </div>
          </div>
          <p
            class="lesson-card__description mt-2"
          />
        </div>
        <a
          class="btn btn-sm bg-primary text-white float-right mb-2 mr-2"
        >
          Review
          <span>
             
            2
             
          </span>
          Submissions
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Lesson Card Should render ellpsis when no data is present 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 border-0"
  >
    <div
      class="d-flex p-2"
    >
      <img
        src="/curriculumAssets/lessonCoversSvg/undefined"
      />
      <div
        class="w-100 pl-4"
      >
        <div>
          <h4
            class="lesson-card__title font-weight-bold mt-3"
          >
            <a
              href="/curriculum/undefined"
            />
          </h4>
          <div>
            <div
              class="d-inline-block mr-4"
            >
              <img
                alt="icon-challenge"
                class="mr-2"
                src="/curriculumAssets/icons/icon-challenge.svg"
              />
              <span
                class="lesson-card__icon-text"
              >
                 CHALLENGES
              </span>
            </div>
          </div>
          <p
            class="lesson-card__description mt-2"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Lesson Card Should render lessonCard with inProgress currentState prop 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 lesson-card__container_inprogress border-primary"
  >
    <div
      class="d-flex p-2"
    >
      <img
        src="/curriculumAssets/lessonCoversSvg/undefined"
      />
      <div
        class="w-100 pl-4"
      >
        <div>
          <h4
            class="lesson-card__title font-weight-bold mt-3"
          >
            <a
              href="/curriculum/undefined"
            />
          </h4>
          <div>
            <div
              class="d-inline-block mr-4"
            >
              <img
                alt="icon-challenge"
                class="mr-2"
                src="/curriculumAssets/icons/icon-challenge.svg"
              />
              <span
                class="lesson-card__icon-text"
              >
                 CHALLENGES
              </span>
            </div>
          </div>
          <p
            class="lesson-card__description mt-2"
          />
        </div>
      </div>
    </div>
    <div
      class="p-2 bg-primary"
    >
      <a
        class="lesson-card__button btn btn-light mr-2 my-1 text-primary"
        rel="noopener noreferrer"
        target="_blank"
      >
        Start Lesson
      </a>
      <a
        class="lesson-card__button btn bg-primary my-1 text-white border border-white"
      >
        View Challenges
      </a>
    </div>
  </div>
</div>
`;

exports[`Lesson Card Should render lessonCard with lessonId prop 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 border-0"
  >
    <div
      class="d-flex p-2"
    >
      <img
        src="/curriculumAssets/lessonCoversSvg/undefined"
      />
      <div
        class="w-100 pl-4"
      >
        <div>
          <h4
            class="lesson-card__title font-weight-bold mt-3"
          >
            <a
              href="/curriculum/4"
            />
          </h4>
          <div>
            <div
              class="d-inline-block mr-4"
            >
              <img
                alt="icon-challenge"
                class="mr-2"
                src="/curriculumAssets/icons/icon-challenge.svg"
              />
              <span
                class="lesson-card__icon-text"
              >
                 CHALLENGES
              </span>
            </div>
          </div>
          <p
            class="lesson-card__description mt-2"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Lesson Card Should render lessonCard with no submission count 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 border-0"
  >
    <div
      class="d-flex p-2"
    >
      <img
        src="/curriculumAssets/lessonCoversSvg/undefined"
      />
      <div
        class="w-100 pl-4"
      >
        <div>
          <h4
            class="lesson-card__title font-weight-bold mt-3"
          >
            <a
              href="/curriculum/undefined"
            />
          </h4>
          <div>
            <div
              class="d-inline-block mr-4"
            >
              <img
                alt="icon-challenge"
                class="mr-2"
                src="/curriculumAssets/icons/icon-challenge.svg"
              />
              <span
                class="lesson-card__icon-text"
              >
                 CHALLENGES
              </span>
            </div>
          </div>
          <p
            class="lesson-card__description mt-2"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Lesson Card Should render loading card when loading 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 border-0"
  >
    <div
      class="d-flex p-2"
    >
      <img
        src="/curriculumAssets/lessonCoversSvg/undefined"
      />
      <div
        class="w-100 pl-4"
      >
        <div>
          <h4
            class="lesson-card__title font-weight-bold mt-3"
          >
            <a
              href="/curriculum/undefined"
            />
          </h4>
          <div>
            <div
              class="d-inline-block mr-4"
            >
              <img
                alt="icon-challenge"
                class="mr-2"
                src="/curriculumAssets/icons/icon-challenge.svg"
              />
              <span
                class="lesson-card__icon-text"
              >
                 CHALLENGES
              </span>
            </div>
          </div>
          <p
            class="lesson-card__description mt-2"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
